# rustmap3d

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-build.sh  pyproject.toml  rustmap3d.pyi
.cargo/: config.toml
.devcontainer/: devcontainer.json  docker-compose.yml
bench/: test_bench.py
crates/map3d/: Cargo.toml  readme.md
crates/map3d/benches/: geobench.rs
crates/map3d/src/: aer.rs  constants.rs  ecef.rs  eci.rs  enu.rs  geo.rs  lib.rs  lla.rs  ned.rs  traits.rs  util.rs  utils.rs  vincenty.rs
crates/map3d/src/geo_objects/: geo_orientation.rs  geo_position.rs  geo_transform.rs  geo_vector.rs  geo_velocity.rs  mod.rs
crates/map3d/src/transforms/: aer.rs  ecef.rs  eci.rs  enu.rs  lla.rs  mod.rs  ned.rs
crates/pymap3d/: Cargo.toml  readme.md
crates/pymap3d/src/: lib.rs
examples/: geo_objects.py  simple.py
python/: readme.md  requirements.txt
python/bench/: bench_geo_transforms.py  performance_bench.py
rust/map3d/: Cargo.toml
rust/map3d/benches/: geobench.rs
rust/map3d/src/: geo.rs  lib.rs  util.rs
rust/rustmap3d/: Cargo.toml
rust/rustmap3d_py/: Cargo.toml  pyproject.toml  rustmap3d.pyi
rust/rustmap3d_py/src/: lib.rs
rustmap3d_py/: readme.md
rustmap3d_rs/: readme.md
scripts/: bench-map3d.sh  build-wheels.sh  build_wheels.sh  docker-build.sh  test-map3d.sh
src/: lib.rs
test/: test_geo.py  test_lla.py  test_vincenty.py
test/test_geo_objects/: test_geo_pos.py  test_geo_vec.py  test_geo_vel.py
