[package]
name = "rustmap3d"
authors = [
    "Lucas Weiler <lucas.l.weiler@leidos.com>",
    "Andrew Molnar <andrew.b.molnar@leidos.com>",
]
edition = "2021"
description = "Python geodetic coordinate conversion library written in rust"
keywords = ["geodetic", "engineering", "scientific", "gis"]
license-file = "LICENSE"
homepage = "https://github.com/lskyweiler/rustmap3d"
repository = "https://github.com/lskyweiler/rustmap3d"
readme = "README.md"
version = "0.2.3"

[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.2.3"

[lib]
# rlib is required to generate py-stubs
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
map3d = { path = "crates/map3d" }
pymap3d = { path = "crates/pymap3d" }

pyo3 = { version = "~0.27", features = [
    "extension-module",
    "generate-import-lib",
] }
glam = { version = "~0.30", features = ["approx"] }

# bin/stub_gen deps
env_logger = "~0.11"
pyo3-stub-gen = { version = "~0.17", default-features = false }
# pyglam = { "git" = "https://github.com/lskyweiler/pyglam" }
pyglam = { "path" = "../pyglam" }

[workspace.dependencies]
map3d = { path = "crates/map3d" }
pyglam = { "path" = "../pyglam" }
# pyglam = { "git" = "https://github.com/lskyweiler/pyglam" }

glam = "~0.30"
pyo3 = "~0.27"
pyo3-stub-gen = { version = "~0.17", default-features = false }

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true # Automatically strip symbols from the binary.
