[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rustmap3d"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
license = { file = "LICENSE" }

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "pylint",
    "maturin",
    "pymap3d",  # for benchmarks
    "numpy",
    "matplotlib",
    'maturin[patchelf] ; platform_system != "Windows"',
]

[tool.maturin]
features = ["pyo3/extension-module"]
