[package]
name = "map3d"
description = "Geodetic coordinate conversion library"
keywords = ["geodetic", "engineering", "scientific", "gis"]
license-file = "../../LICENSE"
homepage = "https://github.com/lskyweiler/rustmap3d"
repository = "https://github.com/lskyweiler/rustmap3d"
readme = "README.md"
version.workspace = true
edition.workspace = true

[dependencies]
glam.workspace = true
almost = "~0.2"
rand = "~0.9"
chrono = "~0.4"
approx = "~0.5"
rand_distr = "0.5.1"

pyo3.workspace = true
pyo3-stub-gen.workspace = true
pyglam.workspace = true

[dev-dependencies]
rstest = "0.26"
criterion = { version = "~0.8", features = ["html_reports"] }

[[bench]]
name = "geobench"
harness = false
