[package]
name = "map3d"
version = "0.1.1"
edition = "2021"

[dependencies]
# use latest by default, but allows downstream packages to use a compatable version
glam = "*"
almost = "0.2.0"
rand = "0.9"
chrono = "0.4.38"

[dev-dependencies]
rstest = "0.25"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "geobench"
harness = false