[package]
name = "rustmap3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustmap3d"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "generate-import-lib"] }
map3d = { path = "../map3d" }
nalgebra-glm = "0.18"

[features]
extension-module = ["pyo3/extension-module"]